# cyphercam

./: env.template  install.sh  manifest.py  ot-recorder.service  preflight.py  pyproject.toml  trigger_server.py  uploader.py
ot_recorder/: ai_pipeline.py  config.py  ffmpeg_manager.py  manifest.py  preflight.py  recorder.py  thingsboard_client.py  uploader.py
