[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ot-recorder"
version = "0.1.0"
description = "OT video recorder for Raspberry Pi + OBSBOT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "boto3>=1.34",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
ot-recorder = "ot_recorder.recorder:main"

[tool.setuptools.packages.find]
where = ["."]
