[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ot-recorder"
version = "0.1.0"
description = "OT video recorder for Raspberry Pi + OBSBOT"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "paho-mqtt>=2.0",
]

[project.scripts]
ot-recorder = "ot_recorder.recorder:main"

[tool.setuptools.packages.find]
where = ["."]
